Exercises #5 for chapter 5

--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "Notice how $\\ket{0}$ and $\\ket{1}$ are seperated by $180\\degree (\\pi)$ on the sphere, but they are perpendicular, so the angle between them is actually $90\\degree (\\pi/2)$. The angles on the Bloch sphere are twice as large as the angles for the qubits.\n",
     "\n",
-    "> Note: the angle on the Bloch sphere that gives the probabilities is $\\theta/2$ \n",
+    "> The angle $\\theta$ on the Bloch sphere gives the probabilities with angle $\\theta/2$ \n",
     "\n",
     "$$\n",
     "P(\\ket{0}) = |\\braket{0|\\psi}|^2 = (\\cos{\\theta/2})^2\n",
@@ -47,6 +47,9 @@
     "Similarly for the probability of $\\ket{1}$\n",
     "\n",
     "$$P(\\ket{1}) = |\\braket{0|\\psi}|^2 = (\\sin{\\theta/2})^2$$\n",
+    "\n",
+    "\n",
+    "The z-axis is where the $\\ket{0}$ & $\\ket{1}$ are, for that reason the z-axis is known as th computational basis. In addition we have the x & y axis which correspond to different states. \n",
     "\n",
     "A useful tool for understanding the Bloch sphere [can be found here](https://javafxpert.github.io/grok-bloch/)\n",
     "\n",
@@ -123,24 +126,23 @@
     "\n",
     "The phase is contained in the + or - sign between the $\\ket{0}$ & $\\ket{1}$. \n",
     "\n",
-    "The phase can be more than just $\\pm 1$, it can be any complex number with magnitude 1. In general, any phase $\\phi$ can be written as \n",
+    "The phase can be more than just $\\pm 1$, it can be any complex number with magnitude 1. In general, any quantum state can have a phase $\\phi$ \n",
     "\n",
-    "$$ \\ket{0} + e^{i\\phi}\\ket{1} $$\n",
+    "$$ \\alpha\\ket{0} + \\beta e^{i\\phi}\\ket{1} $$\n",
     "\n",
-    "[The probability amplitudes have been ignored]\n",
+    "With $ 0 \\leq \\phi < 2\\pi $\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "Remember Euler's formula (section 3.1.2) which allows us to convert from the exponential to the complex number\n",
     "\n",
-    "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
+    "$$ e^{i \\phi} = cos(\\phi) + i sin(\\phi) $$\n",
     "\n",
-    "If we choose $\\theta = 0$ we get $e^0 = 1$ which gives us \n",
-    "\n",
-    "\n",
-    "The phase is also shown on the Bloch sphere. In the above diagram the state $\\ket{\\psi}$ is described by two angles $\\theta$ describing the probabilities of measuring 0 or 1 and $\\phi$ describing the phase. \n",
+    "If we choose $\\phi = 0$ we get $e^0 = 1$ which gives us \n",
     "\n",
     "\n",
-    "\n",
+    "The phase is also shown on the Bloch sphere. In the above diagram the state $\\ket{\\psi}$ is described by two angles $\\theta$ describing the probabilities of measuring 0 or 1 and $\\phi$ describing the phase. The angle $\\phi$ corresponds to a rotation by $\\phi$ around the z-axis in the Bloch sphere.  \n",
     "\n",
     "\n",
     "Phases can be used to encode information, such as with the quantum Fourier transform, or to mark out quantum states (as with Grover's algorithm). \n",
@@ -156,7 +158,7 @@
     "----- | ----- | ----- | ----- | -----|\n",
     "I | Identity: do nothing | $\\ket{0} \\rightarrow  \\ket{0} $ | $\\ket{1} \\rightarrow \\ket{1}$ | $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
     "X | Not: Swaps $\\ket{0}$ with $\\ket{1}$   |$\\ket{0} \\rightarrow \\ket{1}$ |$\\ket{1} \\rightarrow  \\ket{1}$ | $\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}$|\n",
-    "Y | Y: Rotation by angle $\\pi$ around the y-axis | $\\ket{0} \\rightarrow  i\\ket{1} $ |$\\ket{1} \\rightarrow -i\\ket{0} $ | $\\begin{bmatrix} 0 & -i \\\\ i & 0 \\end{bmatrix}$|\n",
+    "Y | Y: Rotation by angle $\\pi$ around the y-axis of the Bloch sphere | $\\ket{0} \\rightarrow  i\\ket{1} $ |$\\ket{1} \\rightarrow -i\\ket{0} $ | $\\begin{bmatrix} 0 & -i \\\\ i & 0 \\end{bmatrix}$|\n",
     "Z | Z: Adds a phase of $e^{i\\pi}$ to $\\ket{1}$|$\\ket{0} \\rightarrow \\ket{0}$|$\\ket{1} \\rightarrow -\\ket{1}$ |$\\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$ |\n",
     "H | Hadamard: Creates the superposition state | $\\ket{0} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1})$ | $\\ket{1} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1})$ | $\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix} $\n",
     "<!-- S | Adds a phase of $e^{\\pi/2}$ |$\\ket{0} \\rightarrow  \\ket{0} $ | \n",
@@ -165,11 +167,45 @@
     "Sometimes it is easier to perform gates by knowing what they do to the $\\ket{0}$, $\\ket{1}$ states, sometimes it is easier to do the matrix multiplication. \n",
     "\n",
     "A more compresnsive list of gates [can be found here](https://raw.githubusercontent.com/qiskit-community/qiskit-textbook/main/content/ch-states/supplements/single-gates-cheatsheet.pdf) \n",
+    "\n",
+    "> ### Exercise 5.4 \n",
+    "> \n",
+    "> By considering the effect on $\\ket{0}$ & $ \\ket{1}$, or by doing matrix multiplication, calculate the following states:\n",
+    ">\n",
+    "> a. $ XZ\\ket{1}$\n",
+    ">\n",
+    "> b. $ XH\\ket{+} $\n",
+    ">\n",
+    "> c. $ XYZ\\ket{0} $\n",
+    "\n",
     "## 5.5 Parameterised quantum gates \n",
     "\n",
     "In addition to these fixed quantum gates, there are quantum gates we can specify ourselves. These gates are described by a parameter we can control to change what the gate does. These gates are very similar to nodes in a neural network where we can change the weights (we will see a lot more about these in a chapter on quantum machine learning).\n",
     "\n",
+    "For instance, we might want to get more than a 50% chance of measuring an output. We can see on the Bloch sphere that if we rotate our quantum state by some angle towards $\\ket{0}$ or $\\ket{1}$ we can boost the probability of measuring those. The matrix that does this rotation is known as $R_y$\n",
     "\n",
+    "$$\n",
+    "R_y(\\theta) = \\begin{bmatrix} \\cos(\\theta /2) & -\\sin(\\theta /2) \\\\ \\sin(\\theta /2) & \\cos(\\theta /2) \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "> The angle we give as input is $\\theta$ the angle we perform the rotation is $\\theta/2$.\n",
+    "\n",
+    "We also have rotations for the x & y axis too. In fact, the X,Y gates are special cases of $R_x(\\theta)$ & $R_y(\\theta)$ with $\\theta = \\pi$. \n",
+    "\n",
+    "$R_z(\\phi)$ is also useful because it allows us to give any phase to a qubit. \n",
+    "\n",
+    "$$\n",
+    "R_z(\\phi) = \\begin{bmatrix} e^{-i\\phi/2} & 0 \\\\ 0 & e^{i\\phi/2} \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "This gives a phase shift of $\\phi$ between $\\ket{0}$ & $\\ket{1}$\n",
+    "\n",
+    "\n",
+    "> ### Exercise 5.5 \n",
+    "> By using $\\theta = \\pi/2$ apply $R_y(\\pi/2)$ to the state $\\ket{1}$. What gate does $R_y(\\pi/2)$ do? \n",
+    "\n",
+    "> ### Exercise 5.6 \n",
+    "> The X gate turns $\\ket{0}$ to $\\ket{1}$ and $\\ket{1}$ to $\\ket{0}$. By considering angles on the Bloch sphere, what is the angle $\\theta$ such that $R_y(\\theta) = X$\n",
     "\n",
     "# Chapter 5 Summary \n",
     "\n",
@@ -177,7 +213,7 @@
     "- The BS shows the probability and phase of a qubit \n",
     "- The phase of a qubit is the $e^{i\\theta}$ difference between the $\\ket{0}$ & $\\ket{1}$ states\n",
     "- There are many qubit gates we can use to perform operations on qubits\n",
-    "\n",
+    "- Some qubit gates are rotations specified by a parameter which describes what the gate does\n",
     "### References \n",
     "\n",
     "[1] Chetan Wake, 2019, Introduction to quantum computing part -1 Representation of qubit using Bloch sphere"
