#3 summary for chapter 6

--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -144,8 +144,13 @@
     "\n",
     "## Summary Chapter 6 \n",
     "\n",
-    "- Quantum computers work in binary \n",
-    "- Quantum states are read right-to-left with the first qubit at the end\n"
+    "- Quantum computers work in binary\n",
+    "- Many qubits have quantum states represented as a binary number\n",
+    "- Quantum states are read right-to-left with the first qubit at the end\n",
+    "- We can apply single qubit gates individually across multiple qubits \n",
+    "- When qubits are independent of one another, they are in a product state\n",
+    "- When one qubit influences the state of another qubit they are entangled \n",
+    "- We can use entanglement to apply logic gates\n"
    ]
   }
  ],
