#3 #5 removed excess, formatted exercises chap 3

--- a/English Chapters/3.1_Complex_numbers.ipynb
+++ b/English Chapters/3.1_Complex_numbers.ipynb
@@ -52,34 +52,29 @@
     "\n",
     "Where $a$ and $b$ are purely real numbers. The real part of $z$ is known as $ Re(z) = a$ and similarly the imaginary component of is $ Im(z) = b$. \n",
     "\n",
-    "### 3.2.3 The Argand Diagram\n",
+    "<!-- ### 3.2.3 The Argand Diagram\n",
     "\n",
     "Complex numbers can be represented on a graph by splitting them into their real & imaginary parts. In the Argand diagram the x axis represents the real part and the y axis represents the imaginary part. \n",
     "\n",
     "![Argand_plane](Images\\A_plus_bi.svg)\n",
     "\n",
-    "If a were negative, the real part would be negative so the arrow would point to the left instead. If b were negative, the imaginary part would be negative, so the arrow would point downwards instead. \n",
+    "If a were negative, the real part would be negative so the arrow would point to the left instead. If b were negative, the imaginary part would be negative, so the arrow would point downwards instead.  -->\n",
     "\n",
     "\n",
-    "### Exercise 3.1\n",
-    "\n",
-    "Consider the complex numbers \n",
-    "\n",
-    "z = 4 + 5i \n",
-    "\n",
-    "y = -3 + i \n",
-    "\n",
-    "m = -2 - 2i \n",
-    "\n",
-    "\n",
-    "i.What is $Re(z)$?\n",
-    "\n",
-    "ii. What is $Im(m)$? \n",
-    "\n",
-    "ii. Sketch z,y,m on the Argand diagram\n",
+    ">### Exercise 3.1\n",
+    ">\n",
+    ">Consider the complex numbers \n",
+    ">\n",
+    ">z = 4 + 5i <br>\n",
+    ">y = -3 + i \n",
+    ">\n",
+    ">i.What is $Re(z)$? <br>\n",
+    ">ii. What is $Im(m)$? \n",
+    "<!-- >$$m = -2 - 2i $$ -->\n",
+    "<!-- ii. Sketch z,y,m on the Argand diagram -->\n",
     "\n",
     "\n",
-    "### 3.2.4 Complex conjugate\n",
+    "### 3.2.3 Complex conjugate\n",
     "\n",
     "Every complex number has a real & imaginary part. By taking the imaginary part of the complex number and making it negative, we get the complex conjugate. For example if the complex number $z$ is \n",
     "\n",
@@ -89,41 +84,38 @@
     "\n",
     "$z^* = x - iy$ \n",
     "\n",
-    "In the figure below the complex number $z$ is shown along with its complex conjugate. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
+    "<!-- In the figure below the complex number $z$ is shown along with its complex conjugate. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
     "\n",
     "![Complex_conjugate](Images\\Complex_conjugate_picture.svg.png)\n",
     " [3]\n",
     "\n",
-    " Note how the real part is the same, but the imaginary part is on the negative axis. \n",
+    " Note how the real part is the same, but the imaginary part is on the negative axis.  -->\n",
     "\n",
-    " ### 3.2.5 Magnitude of complex numbers \n",
+    " ### 3.2.4 Magnitude of complex numbers \n",
     "\n",
     " It can be very useful to describe how big a complex number is. Since it has a real component and an imaginary component, the magnitude of a complex number indicates how big it is across both these components. \n",
     "\n",
     " The magnitude of a complex number $z$ is denoted by two vertical bars as $|z|$. It is calulated the same was as the Euclidean distance as \n",
     "\n",
-    " $$\n",
-    " |z| = \\sqrt{x^2 + y^2}\n",
-    " $$\n",
+    " $$|z| = \\sqrt{x^2 + y^2}$$\n",
     "\n",
     " With $z = x + yi$. \n",
     "\n",
-    " The magnitude of a complex number is important for figuring out the probability of getting an output from a quantum computation. This will be explored in chapter 4.\n",
+    " The magnitude of a complex number is important for figuring out the probability of getting an output from a quantum computation. This will be explored in the next chapter.\n",
     "\n",
-    " ### Exercise 3.2 \n",
-    "\n",
-    " Consider the complex number $z = 3 + 5i$ . \n",
-    "\n",
-    " i. What is the complex conjugate of $z$, $z^*$?\n",
-    " \n",
-    " ii. What is the magnitude of $z$?\n",
-    "  \n",
-    "\n",
-    "iii. What is the magnitude of $z^*$?\n",
+    "> ### Exercise 3.2 \n",
+    ">\n",
+    "> Consider the complex number $z = 3 + 5i$ . \n",
+    ">\n",
+    "> i. What is the complex conjugate of $z$, $z^*$?\n",
+    "> \n",
+    "> ii. What is the magnitude of $z$?\n",
+    ">\n",
+    ">iii. What is the magnitude of $z^*$?\n",
     "\n",
     "### 3.2.5 Euler's formula\n",
     "\n",
-    "Without going through all the steps of explaining where it came from, *Euler's formula* can be stated as:\n",
+    "*Euler's formula* is very useful and can be stated as:\n",
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
@@ -140,7 +132,6 @@
     "With Euler's formula this becomes \n",
     "\n",
     "$$ z = e^{i \\pi/3} $$\n",
-    "\n",
     "\n",
     "In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
     "\n",
