--- a/English Chapters/solutions.ipynb
+++ b/English Chapters/solutions.ipynb
@@ -9,9 +9,18 @@
     "\n",
     "## Chapter 3 The Mathematical minimum \n",
     "\n",
+    "### Complex numbers\n",
+    "\n",
     "### 3.1\n",
     "### 3.2 \n",
+    "\n",
+    "### Linear algebra\n",
+    "\n",
     "### 3.3  \n",
+    "### 3.4 \n",
+    "### 3.5 \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "## Chapter 4 Dirac Notation\n",
