Minor updates to ch 4,6,7,8 #5

--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -65,13 +65,13 @@
     "\n",
     "> This superposition state has its own symbol, $\\ket{+}$.\n",
     "\n",
-    "Instead, if there were a biased coin which had a probability of heads given by $P$, the probability of tails would then be $1-P$. The state of the spinning coin could be represented as\n",
+    "Instead, if there were a biased coin which had a probability of heads given by $P$, we would have a different state. The probability amplitude for $H$ is $\\sqrt{P}$. The probability of getting tails would be $ P(T) = 1 - P(H)$ which gives $P(T) = 1 -P$. So our probability amplitude for $T$ is $\\sqrt{1 - P}$. The state of our coin is then \n",
     "\n",
     "$$\n",
     "\\ket{\\psi} = \\sqrt{P}\\ket{H} + \\sqrt{1-P}\\ket{T}\n",
     "$$\n",
     "\n",
-    "Or \n",
+    "We can write this as a column vector as\n",
     "\n",
     "$$\n",
     "\\ket{\\psi} = \\begin{bmatrix}\n",
