--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -123,12 +123,34 @@
     "\n",
     "## 6.5 Entangled States \n",
     "\n",
+    "If it is easy to simulate a collection of isolated qubits, why do we bother making quantum computers to simulate quantum states? \n",
+    "\n",
+    "The answer comes from combining superposition with entanglement. \n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "## 6.6 If statements with spicy sauce \n",
+    "\n",
+    "\n",
+    "### 6.5.1 If statements with spicy sauce \n",
+    "\n",
+    "In general programming, if statements allow you to include logic in a program. If a statement is true, the algorithm will do one thing, otherwise, if the statement is false, it will do something else. The computer first has to check the variables value before executing the next step of the algorithm. Doing this on a quantum computer would require making a measurement which would collapse the superposition leaving with with a classical bit. \n",
+    "\n",
+    "<!-- For example, in section 4.3.1 there was a game where if a coin landed up we got +1 dollar, otherwise (if it were tails up) we got -1 dollars. This works as a clasical if statement provided we add the value after the coin is landed and observed. \n",
+    "\n",
+    "What makes quantum operators different is that we can apply them to the superposition. What this means is we can act on both the $\\ket{H}$ and $\\ket{T}$ amplitudes at once. \n",
+    "\n",
+    "> Superposition is not parallel computing! -->\n",
+    "\n",
+    "In quantum computing, we want to use the quantum state so we try to avoid making measurements until the end. \n",
+    "\n",
+    "<!-- `We can still do classical if statements (this is a part of quantum teleportation (not covered in this course))` -->\n",
+    "\n",
+    "\n",
+    "> Entanglement allows the superposition of one qubit to change the superpotion of another\n",
+    "\n",
+    "### 6.5.2 Ring the Bell (states)\n",
     "\n",
     "\n",
     "\n",
