--- a/English Chapters/7_Quantum_circuits.ipynb
+++ b/English Chapters/7_Quantum_circuits.ipynb
@@ -20,6 +20,41 @@
     "\n",
     "### 7.1.1 Hello quantum world\n",
     "\n",
+    "In this course the open-source quantum development kit, Qiskit (pronounced kiss-ket) will be used. It is developed by IBM and has the greatest support including: \n",
+    "\n",
+    "- An entire textbook on how to use it \n",
+    "- Many YouTube tutorials (by IBM and 3rd parties)\n",
+    "- Many hackathons orgainsed by IBM and others use Qikist\n",
+    "- Excellent documentation \n",
+    "\n",
+    "There are two ways to use Qiskit. It can be installed on your local machine or accessed over the cloud (for free) thansk to IBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "> ### Exercise 7.1 1 + 1 = 2 (most of the time )\n",
+    "> \n",
+    "> A simple quantum circuit can be used to add 2 bits. \n",
+    "\n",
+    "> ### Exercise 7.2 The Quantum Fourier Transform \n",
+    "> \n",
+    "> The quantum Fourier transform (QFT) is the most powerful subroutine for any quantum algorithm. It is what grants Shors algorithm its exponential speedup and is featured in many quantum algorithms. This exercise will not fully explain what it is, or how it works, but will instead simply generate the circuit for the QFT. \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     " "
    ]
