--- a/English Chapters/8_Quantum_algorithms.ipynb
+++ b/English Chapters/8_Quantum_algorithms.ipynb
@@ -38,6 +38,8 @@
     "- Try a small-scale proof of concept project first \n",
     "    - Small scale QC can be simulated on a classical computer. This can be a lot cheaper than buying access to an expensive QPU\n",
     "\n",
+    "\n",
+    "\n",
     "- Does the problem require QC?\n",
     "    - Quantum computing is a rather exotic solution proposed largerly for problems tackled by supercomputers. Consider more conventional solutions before trying quantum\n",
     "    - How strong is the evidence that QC has an advantage for this problem. \n",
@@ -45,16 +47,19 @@
     "- Hardware \n",
     "\n",
     "    - Number of qubits (is it enough to run our algorithm)\n",
-    "    - Quality of qubits (can you trust the answer)\n",
+    "    - Quality of qubits (are the outputs reliable or just noise)\n",
     "    - Pricing/ availibility (can you afford it)\n",
-    "    - Software features/support (how easy is it to use, does it support optimisation of quantum circuits ect)\n",
-    "        - As the technology develops, pricing will become more competitive\n",
+    "    - Software features/support (how user-friendly is it, is it compatible with qiksit/ML libraries, does it support optimisation of quantum circuits ect)\n",
     "\n",
+    "\n",
+    "- Cost \n",
+    "    - Currently, access to QPU time is dominated by fixed cloud overheads (i.e. the provider). This means the costs can come down very quickly as the hardware scales. \n",
+    "    - Energy costs are a large part of the costs of running conventional HPC clusters. For QPUs almost all the energy requirements are in cooling (with very little in control electronics). How this scales in the future depends on the qubit type. Optimistically, energy requirements could remain fixed for the next few years as the cooling requirements are constant for a significant growth in qubit quantity & quality. \n",
     "\n",
     "\n",
     "### 8.4 Limitations of quantum computing \n",
     "\n",
-    "- Quantum computers are very small scale. As of the time of writing, the gate-based quantum processing unit (QPU) with the most qubits has 127 qubits.\n",
+    "- Quantum computers are very small scale. As of the time of writing, the gate-based quantum processing unit (QPU) with the most qubits has 127 qubits. However this machine from IBM (named eagle) is not currently availible for public use. At the time of writing the QPU with the most availible qubits has [INSERT REFERENCE TO QPU WITH MOST QUBITS]\n",
     "- Current QPU's have high error rates. [INSERT FIGURE]\n",
     "- Quantum computing is very expensive [Reference]\n",
     "\n",
