--- a/English Chapters/solutions.ipynb
+++ b/English Chapters/solutions.ipynb
@@ -7,36 +7,36 @@
     "# Solutions to exercises \n",
     "\n",
     "\n",
-    "## Chapter 3 The Mathematical minimum \n",
+    "## Chapter 3 Part 1 Complex Numbers \n",
     "\n",
     "### Complex numbers\n",
     "\n",
     "### 3.1\n",
     "### 3.2 \n",
     "\n",
-    "### Linear algebra\n",
+    "## Chapter 3 Part 2 Linear algebra\n",
     "\n",
     "### 3.3  \n",
     "### 3.4 \n",
     "### 3.5 \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "## Chapter 4 Dirac Notation\n",
     "### 4.1 \n",
     "\n",
     "\n",
-    "If the probability of measuring heads is $P$, then the probability amplitude for $H$ is $sqrt(P)$. The probability of getting tails is $ P(T) = 1 - P(H)$ which gives $P(T) = 1 -P$. \n",
+    "If the coin is 3 times more likely to be heads than tails, $P(H) = 3/4$ and $P(T) = 1/4$. This gives us probability amplitudes of $\\sqrt{3}/2$ for heads and $1/2$ for tails. \n",
     "\n",
-    "We can then define the state of our coin as $\\ket{\\psi}$\n",
+    "$$\\ket{\\psi} = \\sqrt{3}/2\\ket{H} + 1/2\\ket{T}$$\n",
     "\n",
-    "$$ \\ket{\\psi} = \\sqrt{P} \\ket{H} + \\sqrt{1-P} \\ket{T}$$\n",
+    "We can write this as a column vector as\n",
     "\n",
-    "Writing this as a column vector \n",
+    "$$\n",
+    "\\ket{\\psi} = \\frac{1}{2}\\begin{bmatrix}\n",
+    "\\sqrt{3} \\\\ 1\n",
+    "\\end{bmatrix}\n",
     "\n",
-    "$$ \\ket{\\psi} = \\sqrt{P} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} + \\sqrt{1-P} \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} $$\n",
-    "\n",
+    "$$\n",
     "\n",
     "### 4.2 Expectation values\n",
     "\n",
@@ -108,6 +108,62 @@
     "### 6.1 Convert from binary\n",
     "\n",
     "### 6.2 Convert to binary "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 7 Quantum Circuits \n",
+    "\n",
+    "### 7.1  1 + 1 = 2 (most of the time )\n",
+    "\n",
+    "### 7.2 The Quantum Fourier Transform \n",
+    "\n",
+    "There are multiple ways this can be done. Below is an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import QuantumCircuit, Aer, assemble\n",
+    "import numpy as np\n",
+    "from qiskit.visualization import plot_histogram, plot_bloch_multivector\n",
+    "from qiskit.visualization import array_to_latex\n",
+    "from qiskit.quantum_info import Statevector\n",
+    "\n",
+    "\n",
+    "pi = np.pi\n",
+    "sim = Aer.get_backend('aer_simulator')\n",
+    "\n",
+    "\n",
+    "def QFT(n,draw = False):\n",
+    "\n",
+    "    qc = QuantumCircuit(n)\n",
+    "\n",
+    "    # First qubit\n",
+    "    for i in range(n):\n",
+    "        # print(i)\n",
+    "        qc.h(i)\n",
+    "        l = 2\n",
+    "        for j in range(n-1,i,-1):\n",
+    "            \n",
+    "            theta = 2*pi/(2**(l))\n",
+    "            qc.cp(theta,j,i)\n",
+    "            l += 1\n",
+    "\n",
+    "    qc.barrier()\n",
+    "\n",
+    "    # Order of qubits needs to be reversed \n",
+    "\n",
+    "    for k in range(int((n- n%2)/2)): \n",
+    "        qc.swap(k,int(n-1 - k))\n",
+    "\n",
+    "    if draw:\n",
+    "        qc.draw()"
    ]
   }
  ],
