--- a/English Chapters/0_Acknowledgements.ipynb
+++ b/English Chapters/0_Acknowledgements.ipynb
@@ -11,11 +11,13 @@
     "\n",
     "Thanking Eric (Passawis) for his grammatical corrections to chapters 1,2,3... as well as his encouraging feedback.\n",
     "\n",
-    "Thanking Cris for his invaluable GitHub support\n",
+    "Thanking Cris Diaz for his invaluable GitHub support\n",
     "\n",
     "For his excellent feedback on chapter 1, I would like to thank Ivan Arie De Jesus Caballero Simbaqueba.\n",
     "\n",
-    "For some design suggestions, thanks to Carla Juliana Acosta Zamudio."
+    "For some design suggestions, thanks to Carla Juliana Acosta Zamudio.\n",
+    "\n",
+    "As my first student who put up with me rambling through the first two chapters, I'd like to thank Favio Acosta "
    ]
   }
  ],
