Added lifts to chapter 1 #4, #3

--- a/English Chapters/12_QML.ipynb
+++ b/English Chapters/12_QML.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Many of these AI technologies are based on machine learning.  -->\n",
     "\n",
-    "In Chapter 2.6 there is \n",
+    "A [pannel discussion from 2021 on the Future of Quantum Machine Learning](https://www.youtube.com/watch?v=5UsJV2BNj2U&list=PLOFEBzvs-VvppIb0jg5_aDbmFs36DXD9w)\n",
     "\n",
     "### QC is a lot like machine learning \n",
     "\n",
