--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "### 1.2 How many physicists does it take to change a lightbulb?\n",
     "\n",
-    "In the early 20th century, a German physicist (by the cool name of Max Planck) was tasked with modelling the emission of light from a filament bulb (basically a wire that gets hot enough to glow). He came up with what is known as the black body radiation spectrum. It turns out, from his model, the energy emitted by an object with a finite temperature is not emitted in a continuous spectrum. That's to say rather than all possible wavelengths of light being emitted by this bulb only certain wavelengths were allowed. This is known as a discrete spectrum. What this in turn means is that energy is emitted are chunks, or *quanta*, with a well-defined energy. We can't have energy between these chunks. It's a bit like taking the lift (elevator in American English). One can only get on or off the lift at specific heights corresponding to the floor level. Each floor is seperated by a distance and the lift can go up or down in any multiple of these distances limited by the number of floors. In between those levels the doors of the lift won't open. \n",
+    "In the early 20th century, a German physicist (by the cool name of Max Planck) was tasked with modelling the emission of light from a filament bulb (basically a wire that gets hot enough to glow). He came up with what is known as the black body radiation spectrum. It turns out, from his model, the energy emitted by an object with a finite temperature is not emitted in a continuous spectrum. That's to say rather than all possible wavelengths of light being emitted by this bulb only certain wavelengths were allowed. This is known as a discrete spectrum. What this in turn means is that energy is emitted are chunks, or *quanta*, with a well-defined energy. We can't have energy between these chunks. It's a bit like taking the lift (elevator in American English). One can only get on or off the lift at specific heights corresponding to the floor level. Each floor is seperated by a distance and the lift can go up or down in any multiple of these distances limited by the number of floors. In between those levels the doors of the lift won't open.\n",
+    "\n",
+    "![lift](Images\\Energy_Levels.png)\n",
     "\n",
     "This concept of quantisation of energy is where the quantum comes from. Whilst this concept is less significant to quantum computing, it is still worth mentioning. The reason for this is that the transistor that powers all digital electronics is built upon this concept. Thus all computations using this technology (the integrated circuit) are computers running on quantum mechanics. Which is not to say they are quantum computers simply that they are fundamentally built upon quantum physics, as are you, I, and everything we can see and touch. \n",
     "\n",
@@ -69,8 +71,6 @@
     "These are devices that take advantage of the aforementioned phenomena for practical applications to do something better than what can be done without using them. Quantum computation is one of the most exciting quantum technologies even if it is much less mature than others like quantum metrology (sensing) and encryption (communications).\n",
     "\n",
     "\n",
-    "$^*$ Below about $10^{-35}$ m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
-    "\n",
     "## Chapter 1 Summary \n",
     "\n",
     "- The word quantum comes from quantised- or in discrete units \n",
@@ -83,17 +83,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$^*$ Below about $10^{-35}$ m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
+    "\n",
+    "\n",
     "### Refrences\n",
+    "\n",
     "\n",
     "[1] Micheal Faraday, 1859 “Experimental researches in Chemistry and Physics ... Reprinted from the Philosophical Transactions of 1821-1857; the Journal of the Royal Institution ... and other publications”, p.477"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
