--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "- Sticking coins together is even slower than just flipping them. Not to mention the part where they get shuffled in a pseudorandom way. \n",
     "\n",
-    "In other words, a practical quantum computer would need to be more like a conventional computer: \n",
+    "\n",
+    "These coins represent the qubits in a quantum computer. We should be able to control these qubits faster and more precisely than with coins:\n",
     "\n",
     "- Perform operations on qubits quickly \n",
     "- Have a precise control over the probabilities \n",
@@ -51,7 +52,7 @@
     "\n",
     " Conventional computers are really great at what they do. The field of high-performance computing has had many decades to mature. According to Top500, an index tracking the most powerful supercomputers, the most powerful supercomputer, Fugaku is a $1bn powerhouse. It consumes 29,899 kilowatts to power 7,630,848 cores. For context, a mid-range laptop today might have 6 cores and consume a total of around 20 watts of power. \n",
     "\n",
-    " For both machines, they execute algorithms that take an input and generate outputs in a similar manner. Whilst they are both excellent at solving a great many problems, there are two things they can't handle so well: superposition & entanglement. \n",
+    " Both the laptop and the supercompute execute algorithms that take some inputs and generate outputs. Whilst they are both excellent at solving a great many problems, there are two things they can't handle so well: superposition & entanglement. \n",
     "\n",
     " Starting with a simple coin toss there are 2 possible outcomes. If we add a second coin there are 4 possible outcomes (HH, HT, TH, TT). As more and more coins are added, the number of possible outcomes doubles with each coin that is added. This number $N$, grows as $N = 2^n$. If we had 300 coins, that would mean a single toss has more possible outcomes than we estimate the total number of atoms in the universe. That's roughly 2 followed by 90 0's different combinations of H & T. Now imagine tossing these coins 300 times...\n",
     "\n",
@@ -59,7 +60,9 @@
     "\n",
     " Quantum algorithms are similar to the input and output of classical algorithms but with the addition of superposition and entanglement in the middle.  If an algorithm doesn't feature superposition & entanglement, it would always be better to use the classical computer. \n",
     "\n",
-    " > Quantum computers are __*not*__ faster versions of regular computers"
+    " > Quantum computers are __*not*__ faster versions of regular computers\n",
+    "\n",
+    " > Quantum computers are __*not*__ used to run conventional algorithms, or do things that are already very well done on a classical computer"
    ]
   },
   {
@@ -99,6 +102,7 @@
     "\n",
     "In addition to potential direct impacts, there are a lot of potential benefits to developing the hardware. Being able to measure qubits better can help develop quantum sensors with applications in healthcare & navigation. \n",
     "\n",
+    "\n",
     "## Chapter 2 Summary \n",
     "\n",
     "- Quantum computers are more than just random objects that have superposition\n",
@@ -110,10 +114,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
