--- a/English Chapters/4_Dirac_Notation.ipynb
+++ b/English Chapters/4_Dirac_Notation.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "For the coins, one may wish to know the probability of flipping the coin and getting heads or tails up. With Dirac notaion, the probability of an outcome (heads up) can be calculated using the inner product (see section 3.2.4 for a refresher on the inner product).\n",
     "\n",
-    "### 4.2.1 The inner product gives probabilities\n",
+    "### 4.2.1 Probabilities come from the inner product\n",
     "\n",
     "Using the coin example, the probability of the coin ending up in the heads state $\\ket{H}$ can be calculated as\n",
     "\n",
@@ -165,8 +165,6 @@
     "$$\n",
     "\\braket{H|\\psi} = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 0 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}\n",
     "$$\n",
-    "\n",
-    "$$ = \\left| \\frac{1}{\\sqrt{2}} \\right|^2 = \\frac{1}{2} $$\n",
     "\n",
     "$$ = \\frac{1}{\\sqrt{2}} (1 + 0 ) = \\frac{1}{\\sqrt{2}}$$\n",
     "\n",
@@ -345,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -359,12 +357,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7d8cf412c429d163f0ec8962de5d99a5f7520d1b1380235674c38dc96da666cc"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
