--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -132,7 +132,10 @@
     "\n",
     "With $ 0 \\leq \\phi < 2\\pi $\n",
     "\n",
+    "We can use what we know from the Bloch Sphere to write $\\alpha$ & $\\beta$ in terms of the angle $\\theta$\n",
     "\n",
+    "\n",
+    "$$ \\cos{(\\theta/2)}\\ket{0} + \\sin{(\\theta/2)} e^{i\\phi}\\ket{1} $$\n",
     "\n",
     "\n",
     "Remember Euler's formula (section 3.1.2) which allows us to convert from the exponential to the complex number\n",
@@ -221,10 +224,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
