--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -128,9 +128,11 @@
     "The answer comes from combining superposition with entanglement. \n",
     "\n",
     "\n",
+    "    >>>>>>>>>>>>>>>>>>>> \n",
     "\n",
+    "TODO include circuit for Bell State preperation \n",
     "\n",
-    "\n",
+    "    >>>>>>>>>>>>>>>>>>>>>>\n",
     "\n",
     "\n",
     "### 6.5.1 If statements with spicy sauce \n",
@@ -148,7 +150,7 @@
     "<!-- `We can still do classical if statements (this is a part of quantum teleportation (not covered in this course))` -->\n",
     "\n",
     "\n",
-    "> Entanglement allows the superposition of one qubit to change the superpotion of another\n",
+    "> Entanglement allows the superposition of one qubit to define the superpotion of another\n",
     "\n",
     "### 6.5.2 Ring the Bell (states)\n",
     "\n",
@@ -160,11 +162,9 @@
     "\n",
     "\n",
     "\n",
-    "$^*$ There have been proposals for using a base other than 2 for quantum computing. This has some advanatges but the difficulty in contructing algorithms combined with the difficulties in engineering such a device have prevented any significant machine from being built.\n",
     "\n",
-    "[1] L.Vivah, [Learn How to Read Binary in 5 minutes](https://medium.com/@LindaVivah/learn-how-to-read-binary-in-5-minutes-dac1feb991e), 2018\n",
     "\n",
-    "## Summary Chapter 6 \n",
+    "## Chapter 6 Summary\n",
     "\n",
     "- Quantum computers work in binary\n",
     "- Many qubits have quantum states represented as a binary number\n",
@@ -172,15 +172,31 @@
     "- We can apply single qubit gates individually across multiple qubits \n",
     "- When qubits are independent of one another, they are in a product state\n",
     "- When one qubit influences the state of another qubit they are entangled \n",
-    "- We can use entanglement to apply logic gates\n"
+    "- We can use entanglement to apply logic gates\n",
+    "\n",
+    "\n",
+    "$^*$ There have been proposals for using a base other than 2 for quantum computing. This has some advanatges but the difficulty in contructing algorithms combined with the difficulties in engineering such a device have prevented any significant machine from being built.\n",
+    "\n",
+    "[1] L.Vivah, [Learn How to Read Binary in 5 minutes](https://medium.com/@LindaVivah/learn-how-to-read-binary-in-5-minutes-dac1feb991e), 2018\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
