#3 quirky suggestion [gracias Carla]

--- a/English Chapters/0_Acknowledgements.ipynb
+++ b/English Chapters/0_Acknowledgements.ipynb
@@ -22,9 +22,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.5 ('base')",
    "language": "python",
@@ -34,7 +31,12 @@
    "name": "python",
    "version": "3.8.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
