--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "If this was how subatomic physics worked, there would be no subatomic physics $^*$.\n",
     "\n",
-    "Quantum mechanics is described by the Schrödinger equation that is built on space and time. There are some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant quirks of quantum mechanics that allow for the development of new technologies. \n",
+    "Quantum mechanics is described by the Schrödinger equation that is built on space and time. There are some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant features of quantum mechanics that allow for the development of new technologies. \n",
     "\n",
     "\n",
     "### 1.2 How many physicists does it take to change a lightbulb?\n",
