--- a/English Chapters/8_Quantum_algorithms.ipynb
+++ b/English Chapters/8_Quantum_algorithms.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8 Quantum Algorithms \n",
+    "# 8 Quantum Algorithms \n",
     "\n",
     "\n",
-    "### 8.1 Complexity theory isn't that complicated\n",
+    "## 8.1 Complexity theory isn't that complicated\n",
     "\n",
     "When doing a computation, we are really interested in how long it will take. How long it takes to solve a problem depends on the algorithm. If the algorithm has a lot of steps, it will take the computer longer to solve them problem. It also depends on how fast the computers is/ speed of the memory or ability to use hardware acceleration (GPUs) or parallelise the problem. \n",
     "\n",
@@ -17,15 +17,18 @@
     "\n",
     "For example, adding two n-digit numbers will require on the order of n operations. Multiplication \n",
     "\n",
-    "### 8.2 Quantum computers now and of the future\n",
     "\n",
-    "### 8.3 Types of quantum algorithms \n",
+    "## 8.2 Quantum computers now and of the future\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 8.3 Types of quantum algorithms \n",
     "\n",
     "Fault-tolerant quantum algorithms \n",
     "NISQ quantum algorithms \n",
     "Variational quantum algorithms \n",
     "\n",
-    "### 8.4 How much do we need?\n",
+    "## 8.4 How much do we need?\n",
     "\n",
     "It is extremely important to keep track of the resource requirements for any quantum algorithm. \n",
     "\n",
@@ -68,10 +71,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
