--- a/English Chapters/12_QML.ipynb
+++ b/English Chapters/12_QML.ipynb
@@ -62,21 +62,36 @@
     "- There are no proven advantages to using QML over classical ML \n",
     "- Quantum computers struggle to load large classical datasets \n",
     "- Many proposed quantum algorithms depend on quantum ram, which has yet to be scaled and integrated into QPUs. \n",
-    "- There is significant academic skepticsm, even in commpanies that promote QML\n",
+    "- There is significant academic skepticsm, [even in commpanies that promote QML](https://www.youtube.com/watch?v=5UsJV2BNj2U&list=PLOFEBzvs-VvppIb0jg5_aDbmFs36DXD9w)\n",
     "- If a classical ML solution works perfectly well for a given problem, it is much better to use that than a quantum version. \n",
     "\n",
     "\n",
     "Some optimism: \n",
     "\n",
-    "Quantum machine learning is still a very new field. It may take quite some time to offer benefits, but that doesn't mean it isn't worth exploring.  \n"
+    "Quantum machine learning is still a very new field. It may take quite some time to offer benefits, but that doesn't mean it isn't worth exploring.\n",
+    "\n",
+    "Conventional ML doesn't have much theoretical guarantees, but we know it works really well in practice. Given there are so many diverse applications of ML, one of them is likely to be well-suited to a quantum model.\n",
+    "\n",
+    "Even if our current QML approaches don't offer any value at the moment, further research may uncover models better suited to the hardware we have now...\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
