--- a/English Chapters/7_Quantum_circuits.ipynb
+++ b/English Chapters/7_Quantum_circuits.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7 Quantum Circuits\n",
+    "# 7 Quantum Circuits\n",
     "\n",
     "\n",
     "## 7.1 What do you need for a quantum computation? \n",
@@ -48,6 +48,21 @@
     "> ### Exercise 7.1 1 + 1 = 2 (most of the time )\n",
     "> \n",
     "> A simple quantum circuit can be used to add 2 bits. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "> ### Exercise 7.2 The Quantum Fourier Transform \n",
     "> \n",
@@ -58,13 +73,31 @@
     "\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
