#6 Added the tareas

--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. What is quantum computing\n",
+    "# 2. What is quantum computing\n",
     "\n",
     "In the previous chapter, the fundamental concepts of quantum mechanics were demystified and their relevance to quantum computing was explained. Building on that, this chapter will explain how quantum computers can unlock real-world value."
    ]
