--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -164,8 +164,8 @@
     "Y | Y: Rotation by angle $\\pi$ around the y-axis of the Bloch sphere | $\\ket{0} \\rightarrow  i\\ket{1} $ |$\\ket{1} \\rightarrow -i\\ket{0} $ | $\\begin{bmatrix} 0 & -i \\\\ i & 0 \\end{bmatrix}$|\n",
     "Z | Z: Adds a phase of $e^{i\\pi}$ to $\\ket{1}$|$\\ket{0} \\rightarrow \\ket{0}$|$\\ket{1} \\rightarrow -\\ket{1}$ |$\\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$ |\n",
     "H | Hadamard: Creates the superposition state | $\\ket{0} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1})$ | $\\ket{1} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1})$ | $\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix} $\n",
-    "<!-- S | Adds a phase of $e^{\\pi/2}$ |$\\ket{0} \\rightarrow  \\ket{0} $ | \n",
-    "T | Adds a phase of $e^{\\pi/4}$| $\\ket{0} \\rightarrow  \\ket{0} $| | -->\n",
+    "S | Adds a phase of $e^{\\pi/2}$ betweeen $\\ket{0}$ & $\\ket{1}$|$\\ket{0} \\rightarrow  \\ket{0} $ |$\\ket{1} \\rightarrow e^{\\pi/2}\\ket{1}$  | $\\begin{bmatrix} 1 & 0 \\\\ 0 & e^{\\pi/2} \\end{bmatrix}$\n",
+    "T | Adds a phase of $e^{\\pi/4}$ betweeen $\\ket{0}$ & $\\ket{1}$ | $\\ket{0} \\rightarrow  \\ket{0} $| $\\ket{1} \\rightarrow e^{\\pi/4}\\ket{1}$ |$\\begin{bmatrix} 1 & 0 \\\\ 0 & e^{\\pi/4} \\end{bmatrix}$\n",
     "\n",
     "Sometimes it is easier to perform gates by knowing what they do to the $\\ket{0}$, $\\ket{1}$ states, sometimes it is easier to do the matrix multiplication. \n",
     "\n",
@@ -198,10 +198,13 @@
     "$R_z(\\phi)$ is also useful because it allows us to give any phase to a qubit. \n",
     "\n",
     "$$\n",
-    "R_z(\\phi) = \\begin{bmatrix} e^{-i\\phi/2} & 0 \\\\ 0 & e^{i\\phi/2} \\end{bmatrix}\n",
+    "R_z(\\phi) = \\begin{bmatrix} e^{-i\\phi/2} & 0 \\\\ 0 & e^{i\\phi/2}\\cos(\\theta/2) \\end{bmatrix}\n",
     "$$\n",
     "\n",
     "This gives a phase shift of $\\phi$ between $\\ket{0}$ & $\\ket{1}$\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "> ### Exercise 5.5 \n",
@@ -209,6 +212,26 @@
     "\n",
     "> ### Exercise 5.6 \n",
     "> The X gate turns $\\ket{0}$ to $\\ket{1}$ and $\\ket{1}$ to $\\ket{0}$. By considering angles on the Bloch sphere, what is the angle $\\theta$ such that $R_y(\\theta) = X$\n",
+    "\n",
+    "\n",
+    "## The Universal Quantum Gate \n",
+    "\n",
+    "Just as we can represent any single qubit state with two parameters, we can also represent any single qubit gate using parameters. \n",
+    "\n",
+    "$$\n",
+    "U = \\begin{bmatrix} \\cos(\\theta/2) & e^{i\\lambda}\\sin(\\theta/2) \\\\ e^{i\\theta}\\sin(\\theta/2) & e^{i(\\phi + \\lambda)} \\end{bmatrix} \n",
+    "$$\n",
+    "\n",
+    "Just as we can reach any point on the Bloch Sphere with $\\theta$ & $\\phi$ we can get any quantum gate using $U$. \n",
+    "\n",
+    "The set of all gates that can be made from $U$ are known as $SU(2)$. \n",
+    "\n",
+    ">### Exercise 5.7 \n",
+    "> Which gate in the list above is represented by  $U(\\theta, \\phi, \\lambda) = U(0,0,0)$ \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Chapter 5 Summary \n",
     "\n",
