--- a/English Chapters/7_Quantum_circuits.ipynb
+++ b/English Chapters/7_Quantum_circuits.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "## 7.1 What do you need for a quantum computation? \n",
     "\n",
+    "The predominant model of quantum computing is the circuit model. \n",
+    "\n",
     "A quantum ciruit is a diagram showing the operations that act on qubits to carry out a computation. All quantum circuits have 3 parts:\n",
     "\n",
     "1. Initialisaton: Start your qubits in an initial quantum state\n",
@@ -26,8 +28,12 @@
     "- Many YouTube tutorials (by IBM and 3rd parties)\n",
     "- Many hackathons orgainsed by IBM and others use Qikist\n",
     "- Excellent documentation \n",
+    "- Good compatibility with other gate-based quantum computers\n",
     "\n",
-    "There are two ways to use Qiskit. It can be installed on your local machine or accessed over the cloud (for free) thansk to IBM"
+    "There are two ways to use Qiskit. It can be installed on your local machine or accessed over the cloud (for free) thansk to IBM\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
