--- a/English Chapters/8_Quantum_algorithms.ipynb
+++ b/English Chapters/8_Quantum_algorithms.ipynb
@@ -20,13 +20,14 @@
     "\n",
     "## 8.2 Quantum computers now and of the future\n",
     "\n",
-    "\n",
-    "\n",
     "## 8.3 Types of quantum algorithms \n",
     "\n",
-    "Fault-tolerant quantum algorithms \n",
-    "NISQ quantum algorithms \n",
-    "Variational quantum algorithms \n",
+    "\n",
+    "- NISQ quantum algorithms \n",
+    "- Variational quantum algorithms \n",
+    "    -Variational Quantum Eigensolver, Quantum Approximate Optimisation Ansatz\n",
+    "- Fault-tolerant quantum algorithms \n",
+    "    - Shor's Algorithm, Grover's algorithm, Quantum Monte Carlo,  HHL algorithm \n",
     "\n",
     "## 8.4 How much do we need?\n",
     "\n",
