Tareas #6 Improved multi-qubit tarea

--- a/Tareas/tarea_2.ipynb
+++ b/Tareas/tarea_2.ipynb
@@ -12,8 +12,7 @@
     "\n",
     "On the Bloch Sphere, starting from the top at $\\ket{0}$, draw out the path traced by the qubit from the following gates \n",
     "\n",
-    "H, Z, H \n",
-    "\n",
+    "H, Z, X\n",
     "\n",
     "\n",
     "Where H is the Hadamard gate, Z is the 180 $\\degree$ rotation around the Z-axis of the Bloch sphere and X is the not gate \n",
@@ -31,10 +30,10 @@
     " All single qubit gates can be described as unitary operators in the following form \n",
     " \n",
     "$$\n",
-    "U(\\theta, \\phi, \\lambda) = \\begin{bmatrix} \\cos(\\theta/2) & e^{i\\lambda}\\sin(\\theta/2) \\\\ e^{i\\theta}\\sin(\\theta/2) & e^{i(\\phi + \\lambda)} \\end{bmatrix} \n",
+    "U(\\theta, \\phi, \\lambda) = \\begin{bmatrix} \\cos(\\theta/2) & e^{i\\lambda}\\sin(\\theta/2) \\\\ e^{i\\theta}\\sin(\\theta/2) & e^{i(\\phi + \\lambda)}\\cos(\\theta) \\end{bmatrix} \n",
     "$$\n",
     "\n",
-    "By choosing suitable values of $(\\theta, \\phi, \\lambda)$ \n",
+    "By choosing suitable values of $(\\theta, \\phi, \\lambda)$ show how the following gates can be obtained:\n",
     "\n",
     "- X\n",
     "- Y \n",
