--- a/Tareas/tarea_4.ipynb
+++ b/Tareas/tarea_4.ipynb
@@ -4,14 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4:  Quantum Algorithms \n",
+    "<!-- # Task 4:  Quantum Algorithms \n",
     "\n",
     "## 4.1 Complexity Theory \n",
     "\n",
     "\n",
     "## 4.2 Practical Considerations: Y2Q\n",
     "\n",
-    "Current encryption standards are dominated by 2048 bit RSA encryption. \n"
+    "Current encryption standards are dominated by 2048 bit RSA encryption.  -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 4: Quantum Circuits \n",
+    "\n",
+    "\n"
    ]
   }
  ],
